--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,13 +10,21 @@ services:
 
   hololens-stream:
     build:
-      context: .  # Points to where your Dockerfile is located
+      context: ./hololens-stream  # Separte directory for the hololens-stream container
     container_name: hololens-stream
     depends_on:
       - nats-server
     environment:
       - HOLOLENS_HOST=192.168.2.38  # Set the HoloLens host address here
       - NATS_URL=nats://nats-server:4222
-    volumes:
-      - ./viewer:/app/viewer  # Mounts Python script directory
-    restart: unless-stopped
+  
+  web-server:
+    build:
+      context: ./web-server  # Separte directory for the web-server container
+    container_name: hololens-web-server
+    depends_on:
+      - nats-server
+    ports:
+      - "8080:8080"
+    environment:
+      - NATS_URL=nats://nats-server:4222
