--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -7,11 +7,11 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 # Copy the Flask server and static files
-COPY nats_flask_server.py /app/
+COPY webrtc_signaling_server.py /app/
 COPY static /app/static
 
-# Expose port 8080 for the web server
+# Expose port for WebRTC signaling and web server
 EXPOSE 8080
 
-# Run the Flask app when the container starts
-CMD ["python", "/app/nats_flask_server.py"]
+# Run the Flask signaling server when the container starts
+CMD ["python", "/app/webrtc_signaling_server.py"]
