--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,12 @@ services:
     ports:
       - "8554:8554"  # RTSP Port
 
-  ffmpeg-stream:
-    build: .  # Build from the Dockerfile in the current directory
-    container_name: ffmpeg-stream
+  ffmpeg-hololens-stream:
+    build: .
+    container_name: ffmpeg-hololens-stream
     depends_on:
       - rtsp-simple-server
     volumes:
-      - ./start_stream.sh:/app/start_stream.sh  # Ensure the script is mapped
-    command: /bin/bash /app/start_stream.sh  # Correct shell to run the script
+      - ./hl2ss:/app/hl2ss  # Mount hl2ss directory
+    environment:
+      - HOLOLENS_HOST=192.168.2.38  # Set your HoloLens IP here
